[tox:tox]

[metadata]
name = pydatpiff
version = attr: pydatpiff.__version__
description = Unofficial Datpiff Mixtape player - Download and play the newest Hip-Hop and RnB Songs.
long_description = file: README.md
author = Cornelius Brooks
author_email = cbedroid1614@gmail.com
license = MIT
url = https://github.com/cbedroid/pydatpiff
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
python_requires = >=3.6


install_requires =
    requests >=2
    python-vlc >=3
    mutagen >=1.45.1

[options.packages.find]
exclude =
    tests
    tests.*
    pydatpiff/tests.*

[options.entry_points]
console_scripts =
    pydatpiff = pydatpiff.mixtapes:main


[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure

[testenv:flake8]
max-line-length = 88
ignore = E203, E266, E501,E722, F403, F405, W503, W605

[testenv:tests]
deps =
  pytest
  black
  flake8
  pre-commit
  coverage >=4.1

commands =
  pre-commit run --all-files
  coverage run --source='pydatpiff/' -m pytest

[testenv:release]
deps =
    wheel

commands =
    python setup.py sdist bdist_wheel

[testenv:upload]
skip_install = True

deps =
    twine

PASSENV =
    TWINE_PASSWORD

commands =
    twine upload -u __token__ --non-interactive  --skip-existing dist/*
